feat: flashcard implimented
